logs/Slang/chapter-8/8.25.1--parametrized_class_scope_resolution.sv.log
name: parametrized_class_scope_resolution
description: parametrized class scope resolution
should_fail: 0
tags: 8.25.1
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.25.1--parametrized_class_scope_resolution.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.25.1--parametrized_class_scope_resolution.sv:9:2: error: language feature not yet supported
	class par_cls #(int a = 25);
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.25.1--parametrized_class_scope_resolution.sv:13:2: error: language feature not yet supported
	par_cls #(15) inst;
	^~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.25.1--parametrized_class_scope_resolution.sv:16:10: error: language feature not yet supported
		inst = new;
		       ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.25.1--parametrized_class_scope_resolution.sv:18:12: error: language feature not yet supported
		$display(par_cls#()::b);
		         ^~~~~~~~~~~~~
